--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,15 +6,16 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Wowchemy Research Group"
+#title = "Wowchemy Research Group"
+title = "Kaihao Zhang"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = ""
+baseurl = "https://kh-zhang.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Research Group"
+copyright = "&copy; Research Group {year}"
 
 ############################
 ## Advanced options below ##
