--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,21 +11,26 @@
 [[main]]
   name = "News"
   url = "post"
-  weight = 20
+  weight = 10
 
 [[main]]
   name = "People"
   url = "people"
-  weight = 30
+  weight = 20
 
 [[main]]
   name = "Research"
   url = "event"
-  weight = 40
+  weight = 30
 
 [[main]]
   name = "Publications"
   url = "publication"
+  weight = 40
+
+[[main]]
+  name = "Teaching"
+  url = "teaching"
   weight = 50
 
 [[main]]
