--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -22,8 +22,8 @@ day_night = true
 #   Guide to font sets: https://wowchemy.com/docs/customization/#fonts
 #   Browse the latest built-in font sets at https://github.com/wowchemy/wowchemy-hugo-modules/tree/master/wowchemy/data/fonts
 #   Browse user installed font sets in `data/fonts/`
-# font = "native"
-google_fonts = "family=Montserrat:wght@200"
+font = "minimal"
+# google_fonts = "family=Montserrat:wght@200"
 
 # Choose a font size.
 # Sizes: XS (extra small), S (small), M (medium), L (large - DEFAULT), XL (extra large)
