--- a/data/fonts/minimal.toml
+++ b/data/fonts/minimal.toml
@@ -8,6 +8,9 @@ google_fonts = "family=Montserrat:wght@200&family=Source+Sans+Pro:wght@300"
 # Font families
 # heading_font = "Montserrat"
 heading_font = "Source Sans Pro"
-body_font = "Roboto"
-nav_font = "Roboto"
-mono_font = "Roboto Mono"
+# body_font = "Roboto"
+body_font = "Source Sans Pro"
+# nav_font = "Roboto"
+nav_font = "Source Sans Pro"
+# mono_font = "Roboto Mono"
+mono_font = "Source Sans Pro"
