--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -254,7 +254,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-26225792-1"
   google_tag_manager = ""
   google_site_verification = ""
 
