--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -255,7 +255,7 @@ plugins_js  = []
 ############################
 [marketing]
   google_analytics = "UA-26225792-1"
-  google_tag_manager = ""
+  google_tag_manager = "UA-26225792-1"
   google_site_verification = ""
 
 ############################
