--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,7 +7,7 @@
 
 # Title of your site
 #title = "Wowchemy Research Group"
-title = "Kaihao Zhang"
+title = "Kaihao Zhang Research Group"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
