--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -90,7 +90,7 @@ phone = "+852 2358 8119"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Room 2563, Academic Building, HKUST", city = "", region = "Clear Water Bay", postcode = "", country = "Hong Kong", country_code = ""}
+address = {street = "Room 2563, Academic Building, HKUST", city = "", region = "Clear Water Bay, Hong Kong", postcode = "", country = "", country_code = ""}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
